# Ceylan-Hull

./: .gitignore  CVS-to-webserver.crontab  Ceylan-Hull-technical-manual-english.html  GNUmakefile  GNUmakesettings.inc  GNUmakevars.inc  Makefile.am  README.md  activate-keyboard-backlighting.sh  adb-pull.sh  adb-push.sh  add-header-to-files.sh  affix-images.sh  apply-fan-settings.sh  apt-update.sh  archive-emails.sh  archive-mails.sh  automap.sh  backup-directory.sh  beep  beep.sh  benchmark-command.sh  blender-convert.sh  blender-import.sh  bong.sh  brave.sh  catch.sh  cgrep  changeInTreeFiles.sh  check-filesystem.sh  check-ntp.sh  check-obsolete-code-elements.sh  check-rst-includes.sh  ci  clean-system-caches.sh  clone-screen-to-external.sh  co  co-main.sh  compute-checksum-in-tree.sh  computeMD5Tree.sh  (+372 more)
doc/: Ceylan-Hull-technical-manual-english.rst  Ceylan-Hull-technical-manual-english.rst.template  GNUmakefile  hull.css  index.html
mostly-obsolete/: co  errorHandler.sh  fix-SVN-user.sh  generateTestRules.sh  generateVersionFile.sh  ieeediskoff.sh  ieeediskon.sh  installBaseFiles.sh  ne  netchooser.sh  platform-detection.sh  remoz  set-local-display.sh  setConsoles.sh  setNAT.sh  shell-toolbox.sh  sync-svn-tree.sh  tidy-html-file.sh  tidy-html-in-tree.sh  toci-cvs  toci-svn  transfer-to-mobile.sh  update-txt2tags.sh  updateDebian.sh  usbkeyon.sh  watch-television.sh  yaws.sh
tests/: Makefile.am  test-default-locations.sh  test-record-speech.sh  test-term-utils.sh  testDefaultLocations.sh  testRecordSpeech.sh  testTermUtils.sh
